--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,3 +1,9 @@
 name: TwitchChatPlugin
 version: 1
 main: fr.anthonykgross.TwitchChatPlugin.TwitchChatPlugin
+
+
+commands:
+  lookup:
+    description: Your description
+    usage: /lookup
